map plotting and splash screen add

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -15,6 +15,11 @@ android {
         vectorDrawables.useSupportLibrary = true
 
     }
+
+    dexOptions {
+        maxProcessCount 4 // this is the default value
+        javaMaxHeapSize "4g"
+    }
     buildTypes {
         release {
             minifyEnabled false
